# worldcup_fun_bot

./: .env.example  README.md  bot_watchdog.sh  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
bot/: keyboards.py  messages_fa.py
bot/handlers/: __init__.py  callbacks.py  commands.py  predictions.py  reports.py  utils.py
database/: db.py  models.py
logs/: nohup.out
services/: background_tasks.py  football_api.py  scoring.py  time_utils.py
