[project]
name = "worldcup-predictions-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.10,<0.3",
    "cryptography>=48.0.0",
    "greenlet>=3.0,<4.0",
    "httpx>=0.27,<0.29",
    "python-dotenv>=1.0,<2.0",
    "python-telegram-bot>=22.0,<23.0",
    "sqlalchemy[asyncio]>=2.0,<2.2",
    "tzdata>=2026.2",
]
